added docker, docker-compose, and ArangoDB and Postgres initialisations