@@ -5,9 +5,9 @@ import CommandDesign.CommandsHelp;
 import io.minio.MinioClient;
 import io.minio.Result;
 import io.minio.messages.Item;
-import sun.misc.BASE64Encoder;
 
 import java.io.InputStream;
+import java.util.Base64;
 import java.util.logging.Logger;
 
 public class GetCurrentCoverPictureCommand extends Command {
@@ -19,7 +19,7 @@ public class GetCurrentCoverPictureCommand extends Command {
         MinioClient minioClient = null;
 
         try {
-            minioClient = new MinioClient("http://localhost:9000", "minioadmin", "minioadmin");
+            minioClient = new MinioClient("http://miniodb:9000", "minioadmin", "minioadmin");
             if (minioClient != null) {
                 user_id = parameters.get("user_id");
                 String bucketName = "coverpicturebucket" + user_id;
@@ -32,8 +32,9 @@ public class GetCurrentCoverPictureCommand extends Command {
                     byte[] imageBytes = new byte[(int) item.size()];
                     is.read(imageBytes, 0, imageBytes.length);
                     is.close();
-                    BASE64Encoder encoder = new BASE64Encoder();
-                    String imgBase64 = encoder.encode(imageBytes);
+
+                    byte[] encoded = Base64.getEncoder().encode(imageBytes);
+                    String imgBase64 = new String(encoded);
 
 
                     responseJson.put("app", parameters.get("app"));
